// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExitComp renders 1`] = `
<body>
  <div>
    <div
      class="exit plumb-exit"
    >
      <div
        class="name"
      >
        Red
      </div>
      <div
        class="endpoint  jtk-connected"
        id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
      />
      <div
        style="position: absolute; bottom: -25px;"
      >
        <div
          class="counter activity  visible"
          data-spec="counter-outter"
        >
          <div
            class="count"
            data-spec="counter-inner"
          >
            1,000
          </div>
        </div>
      </div>
    </div>
  </div>
  <temba-store />
</body>
`;

exports[`ExitComp shows activity 1`] = `
Object {
  Symbol(SameObject caches): Object {
    "attributes": NamedNodeMap {},
    "childNodes": NodeList [
      <temba-store />,
      <div>
        <div
          class="exit plumb-exit"
        >
          <div
            class="name"
          >
            Red
          </div>
          <div
            class="endpoint  jtk-connected"
            id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
          />
          <div
            style="position: absolute; bottom: -25px;"
          >
            <div
              class="counter activity  visible"
              data-spec="counter-outter"
            >
              <div
                class="count"
                data-spec="counter-inner"
              >
                1,000
              </div>
            </div>
          </div>
        </div>
      </div>,
      <temba-store />,
    ],
  },
}
`;

exports[`ExitComp shows localization 1`] = `
<body>
  <temba-store />
  <temba-store />
  <temba-store />
  <temba-store />
  <div>
    <div
      class="exit plumb-exit translating"
    >
      <div
        class="name"
      >
        Hola!
      </div>
      <div
        class="endpoint  jtk-connected"
        id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
      />
      <div
        style="position: absolute; bottom: -25px;"
      >
        <div
          class="counter activity  visible"
          data-spec="counter-outter"
        >
          <div
            class="count"
            data-spec="counter-inner"
          >
            1,000
          </div>
        </div>
      </div>
    </div>
  </div>
  <temba-store />
</body>
`;

exports[`ExitComp shows missing localization 1`] = `
<body>
  <temba-store />
  <temba-store />
  <temba-store />
  <div>
    <div
      class="exit plumb-exit translating missing_localization"
    >
      <div
        class="name"
      >
        Red
      </div>
      <div
        class="endpoint  jtk-connected"
        id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
      />
      <div
        style="position: absolute; bottom: -25px;"
      >
        <div
          class="counter activity  visible"
          data-spec="counter-outter"
        >
          <div
            class="count"
            data-spec="counter-inner"
          >
            1,000
          </div>
        </div>
      </div>
    </div>
  </div>
  <temba-store />
</body>
`;

exports[`ExitComp shows recent contacts on mouse over 1`] = `
<body>
  <temba-store />
  <temba-store />
  <div>
    <div
      id="activity_recent_contacts"
    >
      <div>
        <div
          class="recent_contacts"
          style="position: absolute; left: 0px; top: 0px;"
        >
          <div
            class="pointer-capture"
            style="display: flex; margin-top: -20px;"
          >
            <div
              class="left"
              style="flex-grow: 1; pointer-events: none;"
            />
            <div
              class="middle"
              style="width: 50px; height: 40px; margin-bottom: -20px; padding-bottom: 20px;"
            >
               
            </div>
            <div
              class="right"
              style="flex-grow: 1;"
            />
          </div>
          <div
            class="container"
          >
            <div
              class="title"
            >
              Recent Contacts
            </div>
            <div
              class="row"
            >
              <div
                class="contact"
              >
                <a
                  href="undefinedeaea6433-d423-41dd-94a9-075de20f322d"
                >
                  Jim
                </a>
              </div>
              <div
                class="operand"
              >
                Hi Mom!
              </div>
              <div
                class="time"
              >
                a few seconds ago
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="contact"
              >
                <a
                  href="undefinedf781f594-af8b-4493-b67c-2421bf2d4625"
                >
                  Bob
                </a>
              </div>
              <div
                class="operand"
              >
                Hi Dad!
              </div>
              <div
                class="time"
              >
                a few seconds ago
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="exit plumb-exit"
    >
      <div
        class="name"
      >
        Red
      </div>
      <div
        class="endpoint  jtk-connected"
        id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
      />
      <div
        style="position: absolute; bottom: -25px;"
      >
        <div
          class="counter activity  visible"
          data-spec="counter-outter"
        >
          <div
            class="count"
            data-spec="counter-inner"
          >
            1,000
          </div>
        </div>
      </div>
    </div>
  </div>
  <temba-store />
</body>
`;
